# chattext-back

./: .env.example  Dockerfile  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  stored_data.json
functions/: database.py  openai_requests.py  text_to_speech.py
