[tool.poetry]
name = "text-chatbot"
version = "0.1.0"
description = "A FastAPI application for chat responses"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.20.0"
python-decouple = "^3.8"
openai = "^0.27.10"
python-multipart = "^0.0.6"  # Add this line

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
